--- a/EmployeeMangementWebApi/appsettings.json
+++ b/EmployeeMangementWebApi/appsettings.json
@@ -7,13 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultconnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=Employee;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
-  "ConnectionStrings": {
+    "defaultconnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=Employee;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;",
     "AuthConnection": "Server=localhost\\SQLEXPRESS;DataBase=EmployeeAuth;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Key": "abct5643AdRFTG76578",
+    "Key": "abct5643AdRFTG76578hihihuiujwbfj67686gujgr7rr",
     "Issuer": "https://localhost:7296/",
     "Audience": "https://localhost:7296/"
   }
