--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ImagePath": {
+    "UserImagePath": "C:\\Users\\admin\\Desktop\\EmployeeManagementWebApplicationNew-master\\EmployeeManagement\\wwwroot\\Images\\"
+  },
  
   "AllowedHosts": "*",
   "ConnectionStrings": {
