--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -8,10 +8,15 @@
   "ImagePath": {
     "UserImagePath": "C:\\Users\\admin\\Desktop\\EmployeeManagementWebApplicationNew-master\\EmployeeManagement\\wwwroot\\Images\\"
   },
- 
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "defaultconnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=Employee;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
 
+  },
+  "Jwt": {
+    "Key": "abct5643AdRFTG76578hihihuiujwbfj67686gujgr7rr",
+    "Issuer": "https://localhost:7296/",
+    "Audience": "https://localhost:7296/"
   }
 }
